<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    android:orientation="vertical"
    tools:context=".Help.MainHelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@color/gray5"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_main_help_about"
            style="@style/btnMainHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_about" />

        <Button
            android:id="@+id/btn_main_help_add_slave_url"
            style="@style/btnMainHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_add_slave_url" />

        <Button
            android:id="@+id/btn_main_help_new_task"
            style="@style/btnMainHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_new_task" />

    </LinearLayout>
</LinearLayout>